--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 
 </head>
 <body>
+    <!--================================= SPLASH SCREEN PAGE =================================-->
+    <div class="splashscreen" id="splashscreen" data-role="page">
+        <div class="panel">
+            <img src="images/logo.png">
+        </div>
+    </div>
+    <!--================================= (END) SPLASH SCREEN PAGE (END) =================================-->
 
     <!--================================= REGISTER PAGE =================================-->
     <div class="registerPage" id="register" data-role="page">
